--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -2,10 +2,9 @@
 
 // color variables
 $grey: #414042;
-$blue: #214099;
-$teal: #1F7FC3;
-$green: #66BD5A;
-$lime: #CADD65;
+$blue: #245EAC;
+$teal: #18BEF0;
+$green: #79B943;
 
 
 @import "reset";
@@ -23,7 +22,6 @@ $lime: #CADD65;
 // background-container
 .container {
 	background: white;
-	padding-bottom: 20px;
 	max-width: 1150px;
 	margin: 0 auto;
 }
@@ -51,12 +49,23 @@ header {
 
 
 
-// padding div that'll resize for larger screens.
-.pad {
-	padding: 30px 20px;
+// intro font size
+.intro {
+	font-size: 1.4em;
+	line-height: 1.6em;
+	padding: 20px;
 
-	@include respond-to( 768px ) { padding: 30px 50px; }
-	@include respond-to( 1025px ) { padding: 40px 70px; }
+	p {
+		padding: 10px 0;
+
+		@include respond-to( 768px ) {
+			padding: 20px 0;
+		}
+	}
+
+	@include respond-to( 768px ) {
+		font-size: 1.6em;
+	}
 }
 
 
@@ -65,14 +74,24 @@ header {
 .bg-blue { background: $blue; }
 .bg-teal { background: $teal; }
 .bg-green { background: $green; }
-.bg-lime { background: $lime; }
+
+
+
+// style the thermometer a bit.
+.savings-thermometer {
+	margin: 0 auto;
+
+	@include respond-to( 600px ) {
+		margin: 0 0 10px 20px;
+		float: right;
+	}
+}
 
 
 
 // tool styles
 .tool {
 	padding: 0;
-	text-align: center;
 	
 	@include respond-to( 768px ) {
 		padding: 20px 40px;
@@ -80,7 +99,7 @@ header {
 
 	.calculator {
 		color: white;
-		padding: 10px 15px 10px;
+		padding: 20px;
 		@include font-title;
 
 		button, input[type=submit], .btn {
@@ -106,12 +125,17 @@ header {
 .results {
 	display: none;
 	text-align: center;
-	@extend .pad;
+	padding: 20px;
+
+	@include respond-to( 768px ) {
+		padding: 30px;
+	}
 
 	// large title
 	h2 {
 		@include font;
 		font-size: 1.8em;
+		line-height: 1.5em;
 
 		@include respond-to( 768px ) {
 			font-size: 3em;
@@ -121,6 +145,7 @@ header {
 
 	p {
 		font-size: 1.2em;
+		line-height: 1.5em;
 
 		strong {
 			font-size: 1.4em;
@@ -142,7 +167,7 @@ input[type=submit], button, .btn {
 	color: white;
 	border: 0;
 	border-radius: 10px;
-	font-size: 2em;
+	font-size: 2.4em;
 	line-height: 1.4em;
 	text-transform: uppercase;
 	display: block;
@@ -150,12 +175,11 @@ input[type=submit], button, .btn {
 	cursor: pointer;
 	text-align: center;
 	position: relative;
-	margin: 10px auto;
+	margin: 20px auto;
 	box-shadow: 3px 3px 25px lighten( $grey, 35% );
 
 	span {
 		display: block;
-		font-size: 1.4em;
 	}
 	
 	&:after {
@@ -180,7 +204,7 @@ input[type=submit], button, .btn {
 	}
 
 	&.calculate, &.apply {
-		background: $green url(../img/bg-button-gradient.png) bottom center repeat-x;
+		background: $blue;
 	}
 
 	@include respond-to( 768px ) {
@@ -200,7 +224,7 @@ input[type=submit], button, .btn {
 
 
 .fine-print {
-	padding: 20px 0 0;
+	padding: 20px;
 	font-size: .7em;
 	line-height: 1.3em;
 	text-align: left;
