--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -94,6 +94,10 @@ header {
 	padding: 0;
 	
 	@include respond-to( 768px ) {
+		padding: 20px 0;
+	}
+	
+	@include respond-to( 1024px ) {
 		padding: 20px 40px;
 	}
 
@@ -102,19 +106,26 @@ header {
 		padding: 20px;
 		@include font-title;
 
+		.fourty {
+			text-align: center;
+		}
+
 		button, input[type=submit], .btn {
 			width: 100%;
 			margin: 0 auto;
 		}
 		
 		@include respond-to( 768px ) { 
-			margin-top: 30px;
-			border-radius: 20px;
 			font-size: 1.2em;
 
 			img {
 				margin-top: 20px;
 			}
+		}
+
+		@include respond-to( 1024px ) {
+			margin-top: 30px;
+			border-radius: 20px;
 		}
 	}
 }
@@ -167,7 +178,7 @@ input[type=submit], button, .btn {
 	color: white;
 	border: 0;
 	border-radius: 10px;
-	font-size: 2.4em;
+	font-size: 2em;
 	line-height: 1.4em;
 	text-transform: uppercase;
 	display: block;
@@ -177,6 +188,12 @@ input[type=submit], button, .btn {
 	position: relative;
 	margin: 20px auto;
 	box-shadow: 3px 3px 25px lighten( $grey, 35% );
+
+	@include respond-to( 768px ) {
+		font-size: 2.4em;
+		max-width: 40%;
+		margin: 30px auto;
+	}
 
 	span {
 		display: block;
@@ -205,11 +222,6 @@ input[type=submit], button, .btn {
 
 	&.calculate, &.apply {
 		background: $blue;
-	}
-
-	@include respond-to( 768px ) {
-		max-width: 40%;
-		margin: 30px auto;
 	}
 }
 
