--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -182,7 +182,8 @@ input[type=submit], button, .btn {
 	line-height: 1.4em;
 	text-transform: uppercase;
 	display: block;
-	width: 90%;
+	width: 100%;
+	box-sizing: border-box;
 	cursor: pointer;
 	text-align: center;
 	position: relative;
@@ -225,6 +226,10 @@ input[type=submit], button, .btn {
 	}
 }
 
+
+.buttons {
+	padding: 0 20px;
+}
 
 
 // footer styles
